Fix horizontal scroll issue

--- a/app.css
+++ b/app.css
@@ -1,11 +1,12 @@
 .content {
     max-width: 600px;
-    margin: 60px 10px 10px;
+    margin-top: 60px;
 }
 
 .view {
     display: none;
     overflow: auto;
+    width: auto;
 }
 
 .view.modal {
